# jello

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: measure-resources.ps1
src/: contextMenu.ts  icons.ts  main.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app.rs  chords.rs  data_cmds.rs  deeplink.rs  error.rs  extensions.rs  incognito.rs  ipc_types.rs  logging.rs  main.rs  palette.rs  search.rs  sessions.rs  tabs.rs  tray.rs  updater.rs  windows.rs
src-tauri/src/capture/: mod.rs  ocr.rs  screenshot.rs
src-tauri/src/db/: bookmarks.rs  history.rs  migrations.rs  mod.rs  quick_launch.rs  tabs_repo.rs
src-tauri/src/engine/: fractional_index.rs  mod.rs  pool.rs  webview2.rs
src-tauri/src/platform/: mod.rs  win_capture.rs  win_window.rs
src/palette/: controller.ts
src/tablist/: panel.ts  virtual.ts
src/views/: views.ts  wizard.ts
