[package]
name = "jello"
version = "0.4.5"
description = "A Jello Browser"
authors = ["MirakuruSan"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Removed [lib] section

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable", "tray-icon", "protocol-asset"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
serde_json = "1"
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-updater = "2.10.1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-autostart = "2.2.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
webview2-com = "0.38.2"
image = "0.25.10"
arboard = "3.6.1"
nucleo-matcher = "0.3.1"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
zip = { version = "2.2", default-features = false, features = ["deflate"] }
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_Graphics_Dwm", "Media_Ocr", "Graphics_Imaging", "Storage_Streams", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_WinRT", "Win32_UI_Shell", "Win32_System_Registry", "Win32_Security"] }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = "s"
strip = true


